# VMEpp

./: .gitignore  .ycm_extra_conf.py  Makefile  README.md
doc/: Readme.md  TODO.md  doxy_config
doc/html/: index.html
gui/: .qmake.stash
gui/cvarda/: Controller.cpp  Controller.h  DeviceWindow.cpp  DeviceWindow.h  Devices.cpp  Devices.h  Dialogs.cpp  Dialogs.h  Makefile  V895Window.cpp  V895Window.h  color_active.gpa  color_active.gpl  color_inactive.gpa  config.json  cvarda  cvarda.pro  main.cpp  make.sh  moc_Controller.cpp
gui/gvmepp/: CMakeLists.txt  Makefile  QMakefile.mk
gui/gvmepp/inc/: DeviceWindow.h  Dialogs.h  MainWindow.h  Prelude.h  SlaveWindow.h  Style.h  V1785NWindow.h  V2718Window.h  V6533NWindow.h  V895Window.h  ]
gui/gvmepp/src/: DeviceWindow.cpp  Dialogs.cpp  MainWindow.cpp  SlaveWindow.cpp  Style.cpp  V1785NWindow.cpp  V2718Window.cpp  V6533NWindow.cpp  V895Window.cpp  main.cpp
inc/: Auxiliary.h  UConfigurable.h  UParser.h  VArbiter.h  VController.h  VEvent.h  VException.h  VInterruptHandler.h  VMaster.h  VModule.h  VRequester.h  VSlave.h  VSlaveAcquisitor.h  VSlaveInterrupter.h
inc/modules/: .V1190B.h.un~  V1190B.h  V1742B.h  V1742B_SRLZ.h  V1785N.h  V2718.h  V6533N.h  V895.h
pics/: gvmepp_logo.xpm  l33logo.xpm  logo_cvarda.xpm  palette  small.xpm
src/: .Main_tmpl  .Makefile_tmpl  Makefile  UConfigurable.cpp  VArbiter.cpp  VController.cpp  VEvent.cpp  VInterruptHandler.cpp  VMaster.cpp  VRequester.cpp  VSlave.cpp  VSlaveAcquisitor.cpp  VSlaveInterrupter.cpp
template/: Main.cpp  Makefile
test/: Main.cpp  rules.mk
(+119 files in other folders)
